--- a/SCSS/_home.scss
+++ b/SCSS/_home.scss
@@ -1,7 +1,7 @@
 .s-hero{
  padding-top: 16.4rem;
  padding-bottom: 10.3rem;
- background-image:url(/assets/bg-hero.jpg) ;
+ background-image:url(assets/bg-hero.jpg) ;
  background-attachment: fixed;
  background-position: top center;
  background-repeat: no-repeat;
@@ -219,7 +219,7 @@ ul{
   width: 100%;
   padding-top: 16rem;
   padding-bottom: 8rem;
-  background-image: url(/assets/bg-story.png);
+  background-image: url(assets/bg-story.png);
   background-position: top center;
   background-repeat: no-repeat;
   overflow: hidden;
