--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -199,7 +199,7 @@ header .platform ul li {
 .s-hero {
   padding-top: 16.4rem;
   padding-bottom: 10.3rem;
-  background-image: url(assets/bg-hero.jpg);
+  background-image: url(..assets/bg-hero.jpg);
   background-attachment: fixed;
   background-position: top center;
   background-repeat: no-repeat;
@@ -417,7 +417,7 @@ header .platform ul li {
   width: 100%;
   padding-top: 16rem;
   padding-bottom: 8rem;
-  background-image: url(assets/bg-story.png);
+  background-image: url(..assets/bg-story.png);
   background-position: top center;
   background-repeat: no-repeat;
   overflow: hidden;
@@ -516,7 +516,7 @@ header .platform ul li {
 .s-characters {
   padding-top: 17.6rem;
   padding-bottom: 14.3rem;
-  background-image: url(assets/bg-characters.png);
+  background-image: url(..assets/bg-characters.png);
   background-position: center center;
   overflow: hidden;
 }
